Aperture: Add Google Lens icon
Change-Id: I249fbb77c9e1a1c4674ff87c8e3b031a7863ba16

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -284,6 +284,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/primaryBarLayoutGroupPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="galleryButtonCardView,shutterButton,flipCameraButton" />
+
         <ImageButton
             android:id="@+id/shutterButton"
             android:layout_width="75dp"
@@ -317,6 +323,19 @@
                 android:contentDescription="@string/gallery_button_description"
                 android:scaleType="centerCrop" />
         </androidx.cardview.widget.CardView>
+
+        <ImageButton
+            android:id="@+id/googleLensButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="32dp"
+            android:background="@null"
+            android:contentDescription="@string/google_lens_button_description"
+            android:scaleType="center"
+            android:src="@drawable/ic_google_lens"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/flipCameraButton"
